fixed open source infographic on mobile and other minor style changes

--- a/src/styles/modules/header.less
+++ b/src/styles/modules/header.less
@@ -241,6 +241,7 @@
     &.is-active {
         color: @white;
         .font-size(1.2);
+        outline: none;
 
         .at-medium({
             .font-size(1.6);
